client: theme fixes and adjust visibility badge spacing on post view

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -32,7 +32,7 @@
 	--highlight: #2e2e2e;
 
 	/* Dark Mode Colors */
-	--bg: #0e0e0e;
+	--bg: #000;
 	--fg: #fafbfc;
 	--gray: #666;
 	--light-gray: #444;
